--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@langchain/pinecone": "^0.0.4",
     "@pinecone-database/pinecone": "^0.1.6",
     "@prisma/client": "^5.11.0",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@upstash/ratelimit": "^1.0.3",
     "@upstash/redis": "^1.29.0",
@@ -31,6 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cohere-ai": "^5.1.0",
+    "date-fns": "^4.1.0",
     "langchain": "^0.0.92",
     "lucide-react": "^0.363.0",
     "next": "^14.1.4",
