--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cohere-ai": "^5.1.0",
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
+    "jose": "^6.0.10",
     "langchain": "^0.0.92",
     "lucide-react": "^0.363.0",
     "next": "^14.1.4",
