--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "typecheck:watch": "tsc -w"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
     "@hookform/resolvers": "^3.3.4",
     "@langchain/openai": "^0.0.28",
-    "@langchain/pinecone": "^0.0.4",
-    "@pinecone-database/pinecone": "^0.1.6",
     "@prisma/client": "^5.11.0",
+    "@qdrant/js-client-rest": "^1.13.0",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.6",
